SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TEST_OUTPUT_PATH}/${TEST_NAME})
SET(TEST_EXECUTABLE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/run.py)

ADD_EXECUTABLE(${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${UNITTEST_SOURCES})
ADD_CUSTOM_COMMAND(OUTPUT ${TEST_EXECUTABLE}
                   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run.py ${TEST_EXECUTABLE}
                   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/run.py
                   COMMENT "Create ${TEST_EXECUTABLE}")

ADD_CUSTOM_TARGET(${TEST_NAME}_executable DEPENDS ${TEST_EXECUTABLE})
ADD_DEPENDENCIES(${TEST_NAME} ${TEST_NAME}_executable)
