test_pack_name = meson.current_source_dir().split('/').get(-1)

message('\tAdd tests: ' + test_pack_name)

subdir('vector_constructor')
subdir('vector_operators')
subdir('vector_common')
subdir('vector_exponential')
subdir('vector_geometric')
subdir('vector_relational')
subdir('vector_trigonometric')

subdir('matrix_constructor')
subdir('matrix_math_operators')
subdir('matrix_access')
subdir('matrix_assign')
subdir('matrix_func')
subdir('matrix_transform')