tests = ['vector_constructor', 'vector_operators', 'vector_common', 'vector_exponential', 'vector_geometric', 'vector_relational', 'vector_trigonometric',
         'matrix_constructor', 'matrix_math_operators', 'matrix_access', 'matrix_assign', 'matrix_func', 'matrix_transform']

foreach test_name : tests
    subdir(test_name)
endforeach